--- a/springcloud-zuul-9527/src/main/resources/application.yml
+++ b/springcloud-zuul-9527/src/main/resources/application.yml
@@ -11,7 +11,7 @@ eureka:
       defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/
   instance:
     instance-id: zuul9527.com    #定义显示的ip地址
-    prefer-ip-address: true       #隐藏localhost地址
+    prefer-ip-address: true       #隐藏localhost地址11
 
 info:
   app.name: lsl-springcloud
