--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>springcloud-consumer-hystrix-Dashboard-dashboard</module>
         <module>springcloud-zuul-9527</module>
         <module>springcloud-config-server-3344</module>
+        <module>springcloud-config-client-3355</module>
     </modules>
     <!--打包方式 pom -->
     <packaging>pom</packaging>
