--- a/springcloud-config-eureka-7001/pom.xml
+++ b/springcloud-config-eureka-7001/pom.xml
@@ -9,10 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springcloud-eureka-7001</artifactId>
+    <artifactId>springcloud-config-eureka-7001</artifactId>
 
     <!-- 导包 -->
     <dependencies>
+        <!-- config -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>2.2.5.RELEASE</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-server -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
