--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>springcloud-zuul-9527</module>
         <module>springcloud-config-server-3344</module>
         <module>springcloud-config-client-3355</module>
+        <module>springcloud-config-eureka-7001</module>
     </modules>
     <!--打包方式 pom -->
     <packaging>pom</packaging>
